--- a/HTML_Javascript/시험.md
+++ b/HTML_Javascript/시험.md
@@ -1,1 +1,354 @@
+- Read.controller.js
+```java
+김예원
+yewon._.1224
+온라인
 
+
+
+김예원
+ 님이 서버에 뛰어들어 오셨어요. — 25. 11. 4. 오후 12:36
+
+손을 흔들어 인사해보세요!
+만나서 반가워요, 
+CL2/신예찬
+ 님. — 25. 11. 4. 오후 12:50
+
+손을 흔들어 인사해보세요!
+RYU
+ 님이 등장하셨어요! — 25. 11. 4. 오후 12:55
+
+손을 흔들어 인사해보세요!
+모두 
+박민준
+ 님을 환영합시다! — 25. 11. 4. 오후 12:56
+
+손을 흔들어 인사해보세요!
+김예원 — 25. 11. 4. 오후 1:00
+Read.controller.js
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator"
+], (Controller, JSONModel, Filter, FilterOperator) => {
+    "use strict";
+
+    return Controller.extend("ycl2project09.controller.Read", {
+        onInit() {
+            let oModel = new JSONModel({results : []});
+            this.getView().setModel(oModel, "local");
+        },
+        onPress: function() {
+            // 버튼 클릭 시 OData Model 데이터 조회
+            // 서버모델 데이터를 가져오려면, Request 요청을 보내야 함
+            // OData Model에서 데이터를 가져온다.
+            // 데이터를 가져오면, json 구조에 맞는 데이터가 리턴
+            // 해당 json data를 json model에다가 담아서 사용한다.
+            // let oModel = this.getView().getModel();
+            let that=this;
+            let oLocalModel = this.getView().getModel("local");
+            let oModel = this.getOwnerComponent().getModel();   // OData Model. 이름없는 기본모델
+            let oFilter = new Filter({
+                path : "ProductID",
+                operator : "BT",
+                value1 : 10,
+                value2 : 20
+            });
+
+            oModel.createKey("/Products", {
+                OrderID : "1",
+                ProductID : "2"
+            });
+            // sPath => "Order_Details(OrderID=1, ProductID=2)"
+
+            // .create() 생성 .read() 조회 .update() 업데이트 .remove() 삭제 
+            // oModel.read("경로", {});
+            oModel.read("/Products", {
+                urlParameters: {
+                    "$expand" : "Supplier"
+                },
+                filters: [oFilter],
+                // sorters: [],
+                success: function(oReturn) {
+                    // 단 건 조회 : oReturn 자체에 데이터가 들어옴
+                    // 다 건 조회 : oReturn.results 해서 배열 접근
+
+                    // oLocalModel.setProperty("경로", 세팅할데이터);
+                    let oData = [];
+                    for(let i=0; i<oReturn.results.length; i++) {
+                        let item = oReturn.results[i];
+                        oData.push({
+                            ProductID: item.ProductID,
+                            ProductName: item.ProductName,
+                            SupplierID: item.SupplierID,
+                            UnitsInStock: item.UnitsInStock
+                        });
+                    }
+                    oLocalModel.setProperty("/results", oData);
+
+                    // success 함수 안쪽에 처리 oo
+                    // .read 사용시 내부 함수 (success, error)에서는 this가
+                    // controller를 가리키지 않기 때문에 this를 controller로
+                    // 사용하게 하려면 .bind(this)를 적용하거나
+                    // let that = this; 와 같이 변수로 담아놓고 사용하자.
+                    // 아니면 success 함수 내에서 this를 쓰지 않도록
+                    // 필요한 내용은 최상단에 변수로 미리 선언해놓고 써도 됨.
+                }.bind(this),
+                error: function() {}
+                // 메세지 처리 xx
+            });
+        }
+    });
+});
+
+controller.txt
+4KB
+Read.view.xml
+<mvc:View controllerName="ycl2project09.controller.Read"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m"
+
+view.txt
+5KB
+manifest.json
+{
+  "_version": "1.76.0",
+  "sap.app": {
+    "id": "ycl2project10",
+    "type": "application",
+    "i18n": "i18n/i18n.properties",
+
+manifest.txt
+3KB
+CL2/오은지 — 25. 11. 4. 오후 1:02
+감사합니다~!!
+김예원 — 25. 11. 4. 오후 1:03
+Main.view.xml
+<mvc:View controllerName="ycl2project10.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idTextMain" text="Main page" />
+        <Button text="화면 이동" press="onPress" />
+
+mainview.txt
+1KB
+Detail.view.xml
+<mvc:View controllerName="ycl2project10.controller.Detail"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idText" text="Detail page" />
+    </Page>
+
+detailview.txt
+1KB
+Main.controller.js
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project10.controller.Main", {
+
+maincontroller.txt
+2KB
+Detail.controller.js
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project10.controller.Detail", {
+
+detailcontroller.txt
+1KB
+CL2/신예찬 — 25. 11. 4. 오후 1:07
+🫶 감사해요!!
+RYU — 25. 11. 4. 오후 1:07
+감사합니다!
+박민준 — 25. 11. 4. 오후 1:07
+감사합니다~
+김예원 — 25. 11. 12. 오전 10:11
+처음 dialog 창 콤보박스로 바꾸기
+Connection ID, Country From, City To 콤보박스 추가
+여기에 생각나는거 일단 다 올립시당
+그래프 버튼 아래에 추가해서 원형그래프, 선 그래프 등등으로 볼 수 있도록하기 (이건 좀 많이 어려울듯..)
+CL2/오은지 — 25. 11. 12. 오전 10:21
+Add Carrier 버튼을 다중선택으로 변경하기
+김예원 — 25. 11. 12. 오전 10:23
+Carrier List (Main화면)를 정렬해서 볼 수 있는 버튼 위에 추가하기.
+누르면 차례대로 정렬, 역순정렬 등 할 수 있도록
+Carrier List (Main화면) 왼쪽 위에 carrier id 검색창 추가
+박민준 — 25. 11. 12. 오전 10:35
+첨부 파일 형식: document
+개선점.docx
+318.88 KB
+CL2/신예찬 — 25. 11. 12. 오전 10:50
+state (모집중, 만석 등)
+김예원 — 25. 11. 12. 오전 11:04
+Carrier List (Main화면)를 정렬해서 볼 수 있는 버튼 위에 추가하기. 누르면 차례대로 정렬, 역순정렬 등 할 수 있도록
+Connection ID, Country From, City To 콤보박스 추가
+CL2/신예찬 — 25. 11. 12. 오후 2:14
+const getUnique = (arr, key) =>
+           [...new Set(arr.map(x => x[key]).filter(Boolean))];
+
+          oListModel.setProperty("/ConnidList", getUnique(aData, "Connid"));
+          oListModel.setProperty("/CountryfrList", getUnique(aData, "Countryfr"));
+          oListModel.setProperty("/CitytoList", getUnique(aData, "Cityto"));
+sap.ui.define([
+  "sap/ui/core/mvc/Controller",
+  "sap/ui/model/json/JSONModel",
+  "sap/ui/model/Filter",
+  "sap/ui/model/FilterOperator",
+  "sap/ui/core/routing/History",
+
+message.txt
+8KB
+박민준 — 25. 11. 12. 오후 2:41
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment",
+    "sap/m/MessageToast"
+], (Controller, JSONModel, Fragment, MessageToast) => {
+
+main.controller.txt
+5KB
+<core:FragmentDefinition
+    xmlns="sap.m"
+    xmlns:t="sap.ui.table"
+    xmlns:core="sap.ui.core">
+
+    <Dialog
+
+dialog.fragment.txt
+2KB
+박민준 — 25. 11. 12. 오후 3:45
+ onOKpress: function() {
+            let oTable = sap.ui.getCore().byId("idCustomers");
+            let oItem = oTable.getSelectedItem();
+            if (!oItem) {
+                MessageToast.show("선택된 항목이 없습니다.");
+                return;
+
+onOKpress 버튼.txt
+1KB
+ onSelectionChange: function(oEvent) {
+            const oItem = oEvent.getParameter("listItem");
+            const oCtx = oItem.getBindingContext("dialog");
+            if (!oCtx) return;
+
+            const bInactive = !!oCtx.getProperty("_inactive");
+
+onSelectionChange okpress 밑에 에 코드 추가.txt
+1KB
+김예원 — 25. 11. 12. 오후 3:47
+oDialog.open();
+                    oDialog.setModel(oDataModel);
+김예원 — 25. 11. 12. 오후 4:28
+첨부 파일 형식: document
+프로그램 개선 코드 설명.docx
+854.73 KB
+첨부 파일 형식: archive
+개선코드.zip
+25.41 KB
+김예원 — 25. 11. 12. 오후 4:41
+빠뜨린게 있어서 여기에
+이미지
+this.byId("idChart").setVisible(false);
+this.byId("idChartButton").setVisible(false);
+
+이거 두줄 추가해주세요
+디테일 컨트롤러 파일입니다
+김예원 — 25. 11. 12. 오후 5:37
+첨부 파일 형식: document
+프로그램 개선 코드 설명.docx
+718.97 KB
+CL2/신예찬 — 25. 11. 12. 오후 5:46
+https://www.miricanvas.com/login?redirect=%2Fv2%2Fdesign2%2Ff5a063fe-1ce2-4c28-81a0-0f29ec3fb8b2
+CL2/신예찬 — 25. 11. 13. 오전 9:42
+https://www.miricanvas.com/login?redirect=%2Fv2%2Fdesign2%2Ff5a063fe-1ce2-4c28-81a0-0f29ec3fb8b2
+CL2/오은지 — 25. 11. 13. 오후 1:17
+이미지
+﻿
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator"
+], (Controller, JSONModel, Filter, FilterOperator) => {
+    "use strict";
+
+    return Controller.extend("ycl2project09.controller.Read", {
+        onInit() {
+            let oModel = new JSONModel({results : []});
+            this.getView().setModel(oModel, "local");
+        },
+        onPress: function() {
+            // 버튼 클릭 시 OData Model 데이터 조회
+            // 서버모델 데이터를 가져오려면, Request 요청을 보내야 함
+            // OData Model에서 데이터를 가져온다.
+            // 데이터를 가져오면, json 구조에 맞는 데이터가 리턴
+            // 해당 json data를 json model에다가 담아서 사용한다.
+            // let oModel = this.getView().getModel();
+            let that=this;
+            let oLocalModel = this.getView().getModel("local");
+            let oModel = this.getOwnerComponent().getModel();   // OData Model. 이름없는 기본모델
+            let oFilter = new Filter({
+                path : "ProductID",
+                operator : "BT",
+                value1 : 10,
+                value2 : 20
+            });
+
+            oModel.createKey("/Products", {
+                OrderID : "1",
+                ProductID : "2"
+            });
+            // sPath => "Order_Details(OrderID=1, ProductID=2)"
+
+            // .create() 생성 .read() 조회 .update() 업데이트 .remove() 삭제 
+            // oModel.read("경로", {});
+            oModel.read("/Products", {
+                urlParameters: {
+                    "$expand" : "Supplier"
+                },
+                filters: [oFilter],
+                // sorters: [],
+                success: function(oReturn) {
+                    // 단 건 조회 : oReturn 자체에 데이터가 들어옴
+                    // 다 건 조회 : oReturn.results 해서 배열 접근
+
+                    // oLocalModel.setProperty("경로", 세팅할데이터);
+                    let oData = [];
+                    for(let i=0; i<oReturn.results.length; i++) {
+                        let item = oReturn.results[i];
+                        oData.push({
+                            ProductID: item.ProductID,
+                            ProductName: item.ProductName,
+                            SupplierID: item.SupplierID,
+                            UnitsInStock: item.UnitsInStock
+                        });
+                    }
+                    oLocalModel.setProperty("/results", oData);
+
+                    // success 함수 안쪽에 처리 oo
+                    // .read 사용시 내부 함수 (success, error)에서는 this가
+                    // controller를 가리키지 않기 때문에 this를 controller로
+                    // 사용하게 하려면 .bind(this)를 적용하거나
+                    // let that = this; 와 같이 변수로 담아놓고 사용하자.
+                    // 아니면 success 함수 내에서 this를 쓰지 않도록
+                    // 필요한 내용은 최상단에 변수로 미리 선언해놓고 써도 됨.
+                }.bind(this),
+                error: function() {}
+                // 메세지 처리 xx
+            });
+        }
+    });
+});
+```
