--- a/HTML_Javascript/시험.md
+++ b/HTML_Javascript/시험.md
@@ -1,31 +1,5 @@
-- Read.controller.js
+### - Read.controller.js
 ```java
-김예원
-yewon._.1224
-온라인
-
-
-
-김예원
- 님이 서버에 뛰어들어 오셨어요. — 25. 11. 4. 오후 12:36
-
-손을 흔들어 인사해보세요!
-만나서 반가워요, 
-CL2/신예찬
- 님. — 25. 11. 4. 오후 12:50
-
-손을 흔들어 인사해보세요!
-RYU
- 님이 등장하셨어요! — 25. 11. 4. 오후 12:55
-
-손을 흔들어 인사해보세요!
-모두 
-박민준
- 님을 환영합시다! — 25. 11. 4. 오후 12:56
-
-손을 흔들어 인사해보세요!
-김예원 — 25. 11. 4. 오후 1:00
-Read.controller.js
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/ui/model/json/JSONModel",
@@ -350,5 +324,321 @@ sap.ui.define([
             });
         }
     });
+});
+```
+</br>
+</br>
+
+### - Read.view.xml
+```html
+<mvc:View controllerName="ycl2project09.controller.Read"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m"
+    >
+    
+    <f:DynamicPage id="dynamicPageId" headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="{/titleClickable}">
+        <!-- DynamicPage Title -->
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="true">
+                <fb:FilterBar id="filterbar" persistencyKey="myPersKey" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Name" label="Name" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input id="inputProductName" showValueHelp="true" valueHelpRequest="onValueHelpRequest" placeholder="ProductName" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Category" label="Category" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <MultiComboBox
+                                    name="Category"
+                                    selectionChange=".onSelectionChange"
+                                    items="{
+                                        path: '/ProductCategories',
+                                        templateShareable: true
+                                    }"
+                                >
+                                    <core:Item key="{key}" text="{name}"/>
+                                </MultiComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="SupplierName" label="SupplierName" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <MultiComboBox
+                                    name="SupplierName"
+                                    selectionChange=".onSelectionChange"
+                                    items="{
+                                        path: '/ProductSuppliers',
+                                        templateShareable: true
+                                    }"
+                                >
+                                    <core:Item key="{key}" text="{name}"/>
+                                </MultiComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <VBox> 
+                <Button text="데이터 조회" press="onPress" />
+                <Table id="idProductsTable2"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{local>/results}"
+                    class="sapFDynamicPageAlignContent"
+                    width="auto">
+                    <headerToolbar>
+                        <Toolbar>
+                            <Title text="Products" level="H2"/>
+                        </Toolbar>
+                    </headerToolbar>
+                    <columns>
+                        <Column width="12em">
+                            <Text text="ProductID" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="ProductName" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="SupplierID" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="UnitsInStock" />
+                        </Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem>
+                            <cells>
+                                <Text text="{local>ProductID}" />
+                                <Text text="{local>ProductName}" />
+                                <Text text="{local>SupplierID}" />
+                                <Text text="{local>UnitsInStock}" />
+                            </cells>
+                        </ColumnListItem>
+                    </items>
+                </Table>
+            </VBox>
+        </f:content>
+        <!-- DynamicPage Footer -->
+        <f:footer>
+            <OverflowToolbar>
+                <ToolbarSpacer/>
+                <Button type="Accept" text="Accept"/>
+                <Button type="Reject" text="Reject"/>
+            </OverflowToolbar>
+        </f:footer>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+</br>
+
+### - manifest.json
+```java
+{
+  "_version": "1.76.0",
+  "sap.app": {
+    "id": "ycl2project10",
+    "type": "application",
+    "i18n": "i18n/i18n.properties",
+    "applicationVersion": {
+      "version": "0.0.1"
+    },
+    "title": "{{appTitle}}",
+    "description": "{{appDescription}}",
+    "resources": "resources.json",
+    "sourceTemplate": {
+      "id": "@sap/generator-fiori:basic",
+      "version": "1.19.3",
+      "toolsId": "1d868a68-3626-4445-b3d5-b7a171869dff"
+    }
+  },
+  "sap.ui": {
+    "technology": "UI5",
+    "icons": {
+      "icon": "",
+      "favIcon": "",
+      "phone": "",
+      "phone@2": "",
+      "tablet": "",
+      "tablet@2": ""
+    },
+    "deviceTypes": {
+      "desktop": true,
+      "tablet": true,
+      "phone": true
+    }
+  },
+  "sap.ui5": {
+    "flexEnabled": true,
+    "dependencies": {
+      "minUI5Version": "1.142.0",
+      "libs": {
+        "sap.m": {},
+        "sap.ui.core": {}
+      }
+    },
+    "contentDensities": {
+      "compact": true,
+      "cozy": true
+    },
+    "models": {
+      "i18n": {
+        "type": "sap.ui.model.resource.ResourceModel",
+        "settings": {
+          "bundleName": "ycl2project10.i18n.i18n"
+        }
+      }
+    },
+    "resources": {
+      "css": [
+        {
+          "uri": "css/style.css"
+        }
+      ]
+    },
+    "routing": {
+      "config": {
+        "routerClass": "sap.m.routing.Router",
+        "controlAggregation": "pages",
+        "controlId": "app",
+        "transition": "slide",
+        "type": "View",
+        "viewType": "XML",
+        "path": "ycl2project10.view",
+        "async": true,
+        "viewPath": "ycl2project10.view"
+      },
+      "routes": [
+        {
+          "name": "RouteMain",
+          "pattern": ":mainParam:",
+          "target": [
+            "TargetMain"
+          ]
+        },
+        {
+          "name": "RouteDetail",
+          "pattern": "detail/{param1}/:param2:",
+          "target": [
+            "TargetDetail"
+          ]
+        }
+      ],
+      "targets": {
+        "TargetMain": {
+          "id": "Main",
+          "name": "Main"
+        },
+        "TargetDetail": {
+          "id": "Detail",
+          "name": "Detail"
+        }
+      }
+    },
+    "rootView": {
+      "viewName": "ycl2project10.view.App",
+      "type": "XML",
+      "id": "App",
+      "async": true
+    }
+  }
+}
+```
+</br>
+</br>
+
+### - Main.view.xml
+```html
+<mvc:View controllerName="ycl2project10.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idTextMain" text="Main page" />
+        <Button text="화면 이동" press="onPress" />
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### - Detail.view.xml
+```html
+<mvc:View controllerName="ycl2project10.controller.Detail"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idText" text="Detail page" />
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### - Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project10.controller.Main", {
+        onInit() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteMain").attachPatternMatched(this._onPatternMatched, this);
+        },
+        _onPatternMatched: function(oEvent) {
+            let sParam = oEvent.getParameters().arguments.mainParam;
+            this.byId("idTextMain").setText(sParam);
+        },
+        onPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteDetail", {
+                param1 : "hihi",
+                param2 : "okok"
+            }, false);      // 파라미터가 /detail/hihi/okok 이렇게 나옴
+            // Parameter 1 : 이동할 대상 routes의 name
+            // Parameter 2 : 화면 이동 시 전달할 파라미터들 지정
+            // Parameter 3 : router 히스토리 초기화 여부
+        }
+    });
+});
+```
+</br>
+</br>
+
+### - Detail.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project10.controller.Detail", {
+        onInit() {
+            // 컨트롤러 실행시 최초 1번
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteDetail").attachPatternMatched(this._ooo, this);
+        },
+        _ooo: function(oEvent) {
+            // route pattern matched 이벤트는
+            // URL이 일치할 때마다 실행
+
+            let sParam1 = oEvent.getParameters().arguments.param1;
+            this.byId("idText").setText(sParam1);
+        },
+        // onInit과 attachPatternMatched 함수(_ooo) 차이점 명확하게 이해하기
+        onNavButtonPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteMain", {
+                mainParam: "comeback main view"
+            }, false);
+        }
+    }); 
 });
 ```
