Update 1-3. 프로그래밍 코드 최적화(02.03).md

--- a/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
+++ b/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
@@ -1,7 +1,7 @@
 ## < ABAP Editor Code Completion >
 - `CTRL + Space` : 코드 자동완성 호출
 - `Shift + Enter` Or `CTRL + Space + Enter` : 선택한 메서드 템플릿 자동 삽입
-- 'CTRL + `' : 터미널 창 열기
+- `CTRL + `` : 터미널 창 열기
 - `npm run start` : 실행
 </br>
 
