Update 1-3. 프로그래밍 코드 최적화(02.03).md

--- a/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
+++ b/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
@@ -3,6 +3,8 @@
 - `Shift + Enter` Or `CTRL + Space + Enter` : 선택한 메서드 템플릿 자동 삽입
 - `CTRL + 백틱` : 터미널 창 열기
 - `npm run start` : 실행
+- `F12` : 디버깅 확인
+- `F5` : 새로고침
 </br>
 
 - `SAPGUI` 로 열기
