Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -1,3 +1,4 @@
+
 ## < FIORI 복습 >
 - `/` 붙이면 그대로 출력
 <img width="501" height="228" alt="image" src="https://github.com/user-attachments/assets/8dede643-e566-4ec1-a296-51a923fdada6" />
@@ -15,3 +16,4 @@
 
 ### 실습 1
 - `\` 붙이면 그대로 출력
+- 바인딩 실습
